--- a/Machine_Learning_Stock_Prediction.ipynb
+++ b/Machine_Learning_Stock_Prediction.ipynb
@@ -63,7 +63,7 @@
     {
       "cell_type": "code",
       "source": [
-        "API_KEY = 'varos_9e52082dcd5a5fa1086bb87dc3bafdf9'\n",
+        "API_KEY = ''\n",
         "HEADERS = {'accept': 'application/json',\n",
         "           'X-API-KEY': API_KEY}\n",
         "\n",
